[package]
name = "init-RA"
version = "0.1.0"
authors = ["zongmin.gu <zongmin.gzm@alibaba-inc.com>"]
edition = "2018"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "init-ra-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "init"
path = "src/client.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
libc = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10.32"

[build-dependencies]
tonic-build = "0.4"
